# mitdevcat

./: Cargo.toml  DEPLOY_GITHUB_PAGES.md  Dioxus.toml  I18N_GUIDE.md  README.md  deploy.bat  deploy.sh
assets/: main.css  theme-toggle.js
assets/styles/: animations.css  header.css  hero.css
docs/: 404.html  CNAME  index.html
docs/assets/: Mit-logo-dark-bd5a32a247f4b169.png.br  animations-dddfda44b1a9debc.css.br  animations-f7f5883f1a6c2a3b.css  animations-f7f5883f1a6c2a3b.css.br  header-051af58038ea158f.css  header-051af58038ea158f.css.br  header-dcaa81ee22265406.css  header-dcaa81ee22265406.css.br  main-86457d35e9575fe5.css  main-86457d35e9575fe5.css.br  main-a83ce2663f569859.css  main-a83ce2663f569859.css.br  mitdevcat-7a88b94e5b164344.js  mitdevcat-7a88b94e5b164344.js.br  mitdevcat-bb1ac6dcfcea5975.js  mitdevcat-bb1ac6dcfcea5975.js.br  mitdevcat_bg-3ad14ee263f6a08b.wasm  mitdevcat_bg-3ad14ee263f6a08b.wasm.br  mitdevcat_bg-464275084f638e8a.wasm  mitdevcat_bg-464275084f638e8a.wasm.br  mitdevcat_bg-6d5ee4fe2c460314.wasm.br  mitdevcat_bg-a997252b96e42c75.wasm  mitdevcat_bg-a997252b96e42c75.wasm.br  mitdevcat_bg-b65fc5bce91b7308.wasm  mitdevcat_bg-b65fc5bce91b7308.wasm.br  theme-toggle-7c5cc0ac1273e06c.js  theme-toggle-7c5cc0ac1273e06c.js.br
docs/public/assets/: Mit-logo-light-d55880767aa299c0.png.br  animations-dddfda44b1a9debc.css  hero-eb9f42e7e8a3f992.css  hero-eb9f42e7e8a3f992.css.br  (+2 more)
i18n/: ca.ftl  en.ftl  es.ftl
public/assets/: main.css
src/: github_api.rs  main.rs
src/components/: card.rs  header.rs  hero.rs  language_selector.rs  mod.rs  sections.rs
(+2 files in other folders)
